--- a/README
+++ b/README
@@ -1,12 +1,10 @@
+Trabalho relacionado a disciplina de Projeto e Análise de Algoritmos do Curso Mestrado Acadêmico em Computação Aplicada.
+
 Equipe: Beatriz B. Martins, Beatriz M. Reichert, Karine A. Córdova
 Atividade: Implementação de uma Fila Estática Circular Heterogênea Genérica
 
-Dado que não foi especificado uma máquina para testar a implementação, nós utilizamos 
-a ens1. O código está executando sem problemas.
-Nós desenvolvemos as duas aplicações apresentadas pelo professor no Moodle.
-
 A primeira aplicação (Aplicacao_v0.c) tem como objetivo seguir o exemplo apresentado pelo 
-professor em: https://moodle.joinville.udesc.br/mod/assign/view.php?id=101305.
+professor.
 Isto é, a fila contém um valor inteiro, uma string, uma struct e uma pilha. 
 Desse modo a nossa aplicação insere estes elementos na fila, e em seguida apresenta
 o elemento que está no início. Por fim, esse elemento do início é removido.
@@ -29,8 +27,6 @@ uma fila de pilhas. As operações realizadas aqui são:
 // Desenfileire a pilha
 // Destrua a pilha
 // Destrua a fila
-
-Observação: o arquivo pilha.o também foi compilado na máquina ens1.
 
 Comando para executar na máquina ens1:
     gcc -Wall -o exec Aplicacao_v?.c Fila.c pilha.o
